--- a/03_modelisation_LR_XGBOOST.ipynb
+++ b/03_modelisation_LR_XGBOOST.ipynb
@@ -150,15 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Séparation du dataset en dataset d'entrainement et de test\n",
+    "# Création des variables X (features) et y (target)\n",
     "X = dataset.drop(\"MIS_Status\", axis=1)\n",
     "y = dataset[\"MIS_Status\"]\n",
     "\n",
-    "# test_size de 10% puisque beaucoup de données\n",
+    "# Séparation du dataset en dataset d'entrainement et de test(test_size de 20% du dataset)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
    ]
   },
@@ -185,23 +185,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Identification des variables numériques et catégorielles pour le preproccessing\n",
+    "# Identification des variables numériques et catégorielles pour le preprocessing\n",
     "numerical_features = X.select_dtypes(include=['int64', 'float64']).columns\n",
     "categorical_features = X.select_dtypes(include=['object']).columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# Pipeline pour le preproccessing des variables numériques\n",
+    "# Pipeline pour le preprocessing des variables numériques\n",
     "numerical_pipeline = Pipeline([\n",
     "    # Imputation des valeurs manquantes\n",
     "    ('imputer', SimpleImputer(strategy='mean')),\n",
@@ -209,7 +209,7 @@
     "    ('scaler', StandardScaler())\n",
     "])\n",
     "\n",
-    "# Pipeline pour le preproccessing des données catégorielles\n",
+    "# Pipeline pour le preprocessing des données catégorielles\n",
     "categorical_pipeline = Pipeline([\n",
     "    # Imputation des valeurs manquantes\n",
     "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
@@ -223,7 +223,7 @@
     "    ('cat', categorical_pipeline, categorical_features)\n",
     "])\n",
     "\n",
-    "# Création de la pipeline finale avec le preproccessing et modèle de régression logistique avec pondération des classes prédites\n",
+    "# Création de la pipeline finale avec le preprocessing et modèle de régression logistique avec pondération des classes prédites\n",
     "pipeline = Pipeline([\n",
     "    ('preprocessor', preprocessor),\n",
     "    ('classifier', LogisticRegression(class_weight='balanced'))\n",
