--- a/02_visualisation_sba.ipynb
+++ b/02_visualisation_sba.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,8 @@
     "print(df.dtypes.value_counts())\n",
     "\n",
     "df.dtypes.value_counts().plot.pie()\n",
-    "plt.title('Nombre de variables ayant le même type')\n",
+    "plt.title('Répartition du type des variables')\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
